# agent-sync

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.5.2.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  RELEASE_NOTES_v0.6.2.md  RELEASE_NOTES_v0.6.3.md  RELEASE_NOTES_v0.7.0.md  RENAME_REPOS.md  head  plan.md  pyproject.toml  test_issue.py
.github/: release-template.md  release-v0.13.0.md
.github/workflows/: tests.yml
.jules/: sentinel.md
docs/: AGENT_PATHS.md  IMPLEMENTATION_SUMMARY.md  PATHS_VERIFICATION.md  RECONFIGURATION.md  SETUP_WIZARD.md  adding-agents.md  extensions.md  sync-paths-examples.md
examples/: config.yaml
scripts/: cleanup-duplicates.sh  verify_paths.py
skills/: README.md
skills/agent-sync/: SKILL.md
skills/claude-code/: README.md
skills/gemini-cli/: README.md
skills/opencode/: agent-sync.json
skills/pi.dev/: README.md
skills/qwen-code/: README.md
src/agent_sync/: __init__.py  agent_registry.yaml  cli.py  config.py  publish.py  scrubber.py  security.py  setup.py  skills.py  skills_delete.py  skills_diff.py  skills_reconcile.py  (+2 more)
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_extensions.py  test_security.py  test_security_permissions.py  test_security_validation.py  test_skills_delete.py  test_skills_logic.py  test_sync_paths.py  test_transforms.py  test_validators.py  verify_security_fix.py
(+8 files in other folders)
