[project]
name = "agent-sync"
version = "0.4.0"
description = "Unified CLI to sync configs and skills across multiple AI agents (opencode, claude, gemini, pi, qwen)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
keywords = ["ai", "agents", "sync", "config", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.1.0",
  "rich>=13.0.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[project.scripts]
agent-sync = "agent_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sync"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=agent_sync --cov-report=term-missing"
